src/objects/Day_8__c.object
<CustomObject>
    <fields>
        <fullName>Aadhar__c</fullName>
        <label>Aadhar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll__c</fullName>
        <displayFormat>1-{000}</displayFormat>
        <label>Roll</label>
        <type>AutoNumber</type>
    </fields>
    <label>Day 8</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Day 8 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Day 8s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>